user and video model with jwt access and refresh token and bcrypt password hash

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,12 @@
 PORT=8000
-MONGODB_URI=mongodb-url-here
+
+CORS_ORIGIN=http://localhost:3000
+
+MONGODB_URI=mongodb-atlas-or-local-uri
+
+ACCESS_TOKEN_SECRET=your-access-token-secret
+ACCESS_TOKEN_EXPIRY=1d
+
+REFRESH_TOKEN_SECRET=your-refresh-token-secret
+REFRESH_TOKEN_EXPIRY=10d
+
