--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,7 @@ ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=your-refresh-token-secret
 REFRESH_TOKEN_EXPIRY=10d
 
+CLOUDINARY_CLOUD_NAME=clodinary-cloud-name
+CLOUDINARY_API_KEY=clodinary-api-key
+CLOUDINARY_API_SECRET=clodinary-api-secret
+
